finishing our about me page

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am 22 years old looking for the big step in my life, and I think it starts with learning to code!</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Fort Mill, SC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My number one favorite thing to do is whitewater kayak!</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I think it could be really neat to learn ethical hacking but I want to start with the fundamentals of coding first.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>In Bozeman Montana, but for the duration of this bootcamp I am back with my family in Fort Mill.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have always enjoyed technology. It is also a brand new thing with a lot of learning to be done. I never want to stop learning and improving myself.</p>
     </section>
 
     <footer id="footer">
